# starcoin-mcp

./: .gitignore  AGENTS.md  README.md
.agents/plugins/: marketplace.json
docs/: testing-coverage-assessment.md
docs/architecture/: deployment-model.md  design-closure-plan.md  host-integration.md  library-packaging.md  overview.md  runtime-supervision-tui.md
plugins/starcoin-transfer-workflow/: .mcp.json  README.md  TODO.md
shared/protocol/: error-codes.md  request-lifecycle.md
shared/schemas/: README.md  unsigned-transaction-envelope.schema.json  wallet-sign-request.schema.json  wallet-sign-result.schema.json
starcoin-node/: Cargo.toml  README.md
starcoin-node-mcp/: Cargo.toml  README.md
starcoin-node-mcp/crates/starcoin-node-cli/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-cli/src/: main.rs
starcoin-node-mcp/crates/starcoin-node-mcp-core/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-mcp-core/src/: bootstrap.rs  helpers.rs  lib.rs  queries.rs  submission.rs  tests.rs  transaction.rs
starcoin-node-mcp/crates/starcoin-node-mcp-core/tests/: flow_closure.rs  live_read_only.rs
starcoin-node-mcp/crates/starcoin-node-mcp-rpc/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-mcp-rpc/src/: cache.rs  lib.rs  probe.rs  tests.rs  tls.rs  vm2_helpers.rs
starcoin-node-mcp/crates/starcoin-node-mcp-server/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-mcp-server/src/: error_mapping.rs  lib.rs  main.rs  runtime.rs  server.rs
starcoin-node-mcp/crates/starcoin-node-mcp-server/tests/: runtime.rs  tool_surface.rs
starcoin-node-mcp/crates/starcoin-node-mcp-test-support/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-mcp-test-support/src/: lib.rs
starcoin-node-mcp/crates/starcoin-node-mcp-types/: Cargo.toml
starcoin-node-mcp/crates/starcoin-node-mcp-types/src/: config.rs  domain.rs  dto.rs  error.rs  lib.rs
starcoin-node-mcp/crates/starcoin-node-mcp-types/tests/: schema_compat.rs
starcoin-node-mcp/docs/: configuration.md  deployment-model.md  design-closure-plan.md  rpc-adapter-design.md  rust-implementation-strategy.md  security-model.md  starcoin-node-mcp-interface-design.md  testing-and-acceptance.md
starcoin-node-mcp/docs/architecture/: host-integration.md
starcoin-node/crates/starcoin-node-cli/: Cargo.toml
starcoin-node/crates/starcoin-node-cli/src/: main.rs
starcoin-node/crates/starcoin-node-core/: Cargo.toml
starcoin-node/crates/starcoin-node-core/src/: lib.rs  submission.rs  tests.rs  transaction.rs
starcoin-node/crates/starcoin-node-core/tests/: flow_closure.rs  live_read_only.rs
starcoin-node/crates/starcoin-node-rpc/: Cargo.toml
starcoin-node/crates/starcoin-node-rpc/src/: lib.rs  probe.rs  tests.rs  vm2_helpers.rs
starcoin-node/crates/starcoin-node-types/: Cargo.toml
starcoin-node/crates/starcoin-node-types/src/: config.rs  dto.rs  error.rs
starcoin-node/crates/starcoin-node-types/tests/: schema_compat.rs
starcoin-node/docs/: configuration.md  deployment-model.md  design-closure-plan.md  rpc-adapter-design.md  rust-implementation-strategy.md  security-model.md  starcoin-node-interface-design.md  testing-and-acceptance.md
starmask-mcp/: AGENTS.md  Cargo.toml  README.md
starmask-mcp/crates/starmask-core/: Cargo.toml
starmask-mcp/crates/starmask-core/src/: commands.rs  error.rs  lib.rs  policy.rs  service.rs
starmask-mcp/crates/starmask-local-account-agent/: Cargo.toml
starmask-mcp/crates/starmask-local-account-agent/src/: agent.rs  client.rs  lib.rs  main.rs  request_support.rs  tty_prompt.rs
starmask-mcp/crates/starmask-local-account-agent/src/agent/: stack_tests.rs
starmask-mcp/crates/starmask-mcp/: Cargo.toml
starmask-mcp/crates/starmask-mcp/src/: daemon_client.rs  dto.rs  error_mapping.rs  lib.rs  main.rs  runtime.rs  server.rs
starmask-mcp/crates/starmask-mcp/tests/: error_mapping.rs  request_mapping.rs  tool_surface.rs
starmask-mcp/crates/starmask-mcp/tests/support/: mod.rs
starmask-mcp/crates/starmask-native-host/: Cargo.toml
starmask-mcp/crates/starmask-native-host/src/: bridge.rs  client.rs  framing.rs  main.rs  notify.rs
starmask-mcp/crates/starmask-types/src/: daemon.rs  errors.rs  jsonrpc.rs  lib.rs  lifecycle.rs  native_bridge.rs  records.rs  time.rs
starmask-mcp/crates/starmaskctl/: Cargo.toml
starmask-mcp/crates/starmaskctl/src/: main.rs
starmask-mcp/crates/starmaskd/: Cargo.toml
starmask-mcp/crates/starmaskd/migrations/: 0002_generic_wallet_backends.sql
starmask-mcp/crates/starmaskd/src/: config.rs  coordinator_runtime.rs  lib.rs  main.rs  server.rs  sqlite_store.rs
starmask-mcp/crates/starmaskd/tests/: local_backend_recovery.rs  migration_compatibility.rs  transport.rs
starmask-mcp/crates/starmaskd/tests/support/: mod.rs
starmask-mcp/docs/: approval-ui-spec.md  configuration.md  daemon-protocol.md  local-automated-coverage-matrix.md  mcp-shim-coverage-matrix.md  mcp-shim-real-environment-runbook.md  native-messaging-contract.md  native-messaging-examples.md  persistence-and-recovery.md  rmcp-adapter-design.md  rust-core-api-design.md  rust-implementation-strategy.md  security-model.md  sqlite-schema-and-migrations.md  starmask-mcp-interface-design.md  test-harness-design.md  testing-and-acceptance.md  unified-wallet-coordinator-evolution.md  wallet-backend-agent-contract.md  wallet-backend-configuration.md  wallet-backend-local-socket-binding.md  wallet-backend-persistence-and-schema.md  wallet-backend-security-model.md  wallet-backend-testing-and-acceptance.md
starmask-runtime/: AGENTS.md  Cargo.toml  README.md
starmask-runtime/crates/starmask-local-account-agent/: Cargo.toml
starmask-runtime/crates/starmask-local-account-agent/src/: agent.rs  client.rs  export_account.rs  lib.rs  main.rs  request_support.rs  tty_prompt.rs
starmask-runtime/crates/starmask-local-account-agent/src/agent/: stack_tests.rs
starmask-runtime/docs/: adapter-coverage-matrix.md  adapter-real-environment-runbook.md  approval-ui-spec.md  configuration.md  daemon-protocol.md  local-automated-coverage-matrix.md  native-messaging-contract.md  rust-core-api-design.md  (+16 more)
(+68 files in other folders)
