[workspace]
members = [
  "crates/starcoin-node-mcp-types",
  "crates/starcoin-node-mcp-rpc",
  "crates/starcoin-node-mcp-core",
  "crates/starcoin-node-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/starcoinorg/starcoin-mcp"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bcs-ext = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "bcs-ext" }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starcoin-vm2-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto.git", rev = "5417dce574142c3da24adf987194a6931869f588", package = "starcoin-crypto" }
starcoin-vm2-types = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-types" }
starcoin-vm2-vm-types = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-vm-types" }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
