[workspace]
members = [
  "crates/starmask-core",
  "crates/starmask-mcp",
  "crates/starmask-native-host",
  "crates/starmask-types",
  "crates/starmaskctl",
  "crates/starmaskd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/starcoinorg/starcoin-mcp"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
pretty_assertions = "1.4"
rmcp = { version = "1.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
