[workspace]
members = [
  "crates/starmask-core",
  "crates/starmask-local-account-agent",
  "crates/starmask-mcp",
  "crates/starmask-native-host",
  "crates/starmask-types",
  "crates/starmaskctl",
  "crates/starmaskd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/starcoinorg/starcoin-mcp"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bcs-ext = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "bcs-ext" }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
pretty_assertions = "1.4"
rpassword = "7.4"
rmcp = { version = "1.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
starcoin-account-api = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-account-api" }
starcoin-account = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-account" }
starcoin-config = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-config" }
starcoin-types = { git = "https://github.com/starcoinorg/starcoin.git", rev = "3febb106f1cf0cbfbd1562303ca39e094f843f9a", package = "starcoin-vm1-types" }
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
nix = { version = "0.29", features = ["user"] }
walkdir = "2.5"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "762a9501668d213daa4a1864fa1f9db22716b661" }
