[package]
name = "starcoin-node-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "starcoin-node-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
starcoin-node-mcp-core = { path = "../starcoin-node-mcp-core" }
starcoin-node-mcp-types = { path = "../starcoin-node-mcp-types" }
tokio.workspace = true
tracing-subscriber.workspace = true
