[package]
name = "starcoin-node-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bcs-ext.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
starcoin-node-mcp-rpc = { path = "../starcoin-node-mcp-rpc" }
starcoin-node-mcp-types = { path = "../starcoin-node-mcp-types" }
starcoin-vm2-crypto.workspace = true
starcoin-vm2-types.workspace = true
starcoin-vm2-vm-types.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock.workspace = true
url.workspace = true
