[package]
name = "starcoin-node-mcp-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
starcoin-node-mcp-types = { path = "../starcoin-node-mcp-types" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
webpki-roots.workspace = true
x509-parser.workspace = true

[dev-dependencies]
httpmock.workspace = true
starcoin-node-mcp-test-support = { path = "../starcoin-node-mcp-test-support" }
