[package]
name = "starcoin-node-mcp-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
httpmock.workspace = true
serde_json.workspace = true
starcoin-node-mcp-types = { path = "../starcoin-node-mcp-types" }
url.workspace = true
