[package]
name = "starcoin-node-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "starcoin-node-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
starcoin-node-core = { path = "../starcoin-node-core" }
starcoin-node-types = { path = "../starcoin-node-types" }
tokio.workspace = true
tracing-subscriber.workspace = true
