[package]
name = "starmask-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
starmask-types = { path = "../starmask-types" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
