[package]
name = "starmask-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
starmask-types = { path = "../starmask-types" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
