[package]
name = "starmask-native-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
starmask-types = { path = "../starmask-types" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
