[package]
name = "starmaskctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
starmaskd = { path = "../starmaskd" }
starmask-types = { path = "../starmask-types" }
