[package]
name = "starmask-local-account-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "local-account-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bcs-ext.workspace = true
clap.workspace = true
hex.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
starcoin-account.workspace = true
starcoin-account-api.workspace = true
starcoin-config.workspace = true
starcoin-types.workspace = true
starmask-types = { path = "../starmask-types" }
starmaskd = { path = "../starmaskd" }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
starmask-core = { path = "../starmask-core" }
tempfile.workspace = true
tokio.workspace = true
